# CrowdLens

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: deploy-backend.yml  deploy-frontend.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/routes/: detection.py  health.py
backend/app/core/: config.py  constants.py  exceptions.py
backend/app/db/: base.py
backend/app/models/: detection.py  detection_item.py
backend/app/repositories/: detection_repository.py
backend/app/schemas/: common.py  detection.py
backend/app/services/: detection_service.py  image_service.py
backend/app/vision/: yolo_detector.py
deploy/: DEPLOYMENT.md  cloudformation.yml  setup-ecr.sh
frontend/: .env.example  .env.production  eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/api/: client.ts  detectionApi.ts  index.ts
frontend/src/components/common/: AppError.vue  AppLoader.vue
frontend/src/components/detection/: DetectionResult.vue  DetectionTable.vue  ImageUploader.vue
frontend/src/router/: index.ts
frontend/src/stores/: detectionStore.ts  index.ts
frontend/src/types/: detection.ts  index.ts
frontend/src/views/: DetailView.vue  HistoryView.vue  ResultView.vue  UploadView.vue
